--- a/components/pageList/pageList.wxss
+++ b/components/pageList/pageList.wxss
@@ -1,7 +1,3 @@
-/* pages/me/browseHistroy.wxss */
-page{
-  padding-top:90rpx;
-}
 .browseHistoryLists{
   padding-left:20rpx ;
   background: #fff;
@@ -9,18 +5,18 @@ page{
   box-sizing: border-box;
 }
 .browseHistory_list{
-  overflow: hidden;
+  display: flex;
 }
 .browseHistory_list_img{
-  float: left;
   width:210rpx;
   height: 210rpx;
+  margin-right: 20rpx;
 }
 .browseHistory_list_right{
   height:209rpx;
   float: right;
   border-bottom: 1px solid #eee;
-  width: 496rpx;
+  flex: 1;
 }
 .browseHistory_date{
   color: #4D4D4D;
@@ -28,7 +24,6 @@ page{
   line-height: 70rpx;
 }
 .browseHistory_list_title{
-  width: 496rpx;
   color:#444;
   font-size: 32rpx;
   overflow:hidden; 
@@ -64,48 +59,4 @@ page{
   border:1px solid #eee;
   padding:4rpx 10rpx;
   border-radius: 10rpx;
-}
-
-
-.editTool{
-  height: 98rpx;
-  width:100%;
-  border-top:1px solid #eee;
-  background: #fff;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-}
-.editTool_remove{
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 96rpx;
-  line-height: 96rpx;
-  width: 248rpx;
-  background: #E31C0C;
-  color:#fff;
-  font-size: 30rpx;
-  text-align: center
-}
-.editTool_select{
-  position: absolute;
-  top: 0;
-  left:20rpx;
-  height: 96rpx;
-  line-height: 96rpx;
-}
-.editTool_select_img{
-  width: 38rpx;
-  height: 38rpx;
-  margin-top:4rpx;
-  vertical-align: text-top;
-  margin-right: 4rpx;
-}
-.modal_text{
-  text-align: center;
-  font-size: 40rpx;
-}
-.loading{
-  text-align: center;
 }
