--- a/pages/address/getAddress.wxml
+++ b/pages/address/getAddress.wxml
@@ -1,2 +1,22 @@
 <!--pages/address/getAddress.wxml-->
-<text>pages/address/getAddress.wxml</text>
+<pageHeader
+  pageTitle='切换地址'
+  bind:goBack="goBack"
+>
+
+</pageHeader>
+<view class='addressLists'>
+  <view class='address_grade'>
+    <view wx:if="{{areaGrade==0}}" class='address_list'>全国</view>
+    <view wx:if="{{areaGrade==1}}" class='address_list'>全省</view>
+    <view wx:if="{{areaGrade==2}}" class='address_list'>全市</view>
+    <view wx:if="{{areaGrade==3}}" class='address_list'>全区</view>
+    <view wx:if="{{areaGrade==4}}" class='address_list'>全部街道</view>
+    <view wx:if="{{areaGrade!=0}}" class='address_list' bindtap='backGrade'>返回上一级</view>
+  </view>
+  <view class='address_area'>
+    <block wx:for="{{areas}}">
+      <view class="address_list {{index%3==1?'middle':''}}" data-parentId="{{item.parentId}}" id='{{item.areaId}}' bindtap='areaSelect'>{{item.areaName}}</view>
+    </block>
+  </view>
+</view>
