--- a/components/pageHeader/pageHeader.wxml
+++ b/components/pageHeader/pageHeader.wxml
@@ -2,7 +2,7 @@
 <view style='position:fixed;width:100%;height:90rpx;top:0;z-index:3'>
   <view>
     <view class='pageHeader'>
-      <image class='pageHeader_goback' src='../../images/nav_btn_back_new.png'></image>
+      <image class='pageHeader_goback' bindtap='_goBack' src='../../images/nav_btn_back_new.png'></image>
       <text class='pageHeader_title'>{{pageTitle}}</text>
       <text class='pageHeader_tool' bindtap='pageTool'>{{pageTool}}</text>
     </view>
