--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,2 +1,55 @@
-<!--pages/cart/cart.wxml-->
-<text>pages/cart/cart.wxml</text>
+<!-- 页面头部 -->
+<pageHeader
+  pageTitle='{{pageTitle}}'
+  pageTool='{{pageToolText}}'
+  bind:pageToolFn="pageToolFn"
+></pageHeader>
+
+
+<block wx:for="{{cartLists}}" wx:for-item="parent" wx:for-index="parentIndex">
+  <view class='cart_list' id='{{parent.brandId}}'>
+    <!-- 购物车店铺头部 -->
+    <view class='cart_list_top'>
+      <view class='cart_list_top_left'>
+        <image data-index="{{parentIndex}}" bindtap='toggleSelect' data-id='{{parent.brandId}}' class='cart_select_img' src="{{parent.select?'/images/shoppingcar_btn_select_s.png':'/images/shoppingcar_btn_select_n.png'}}"></image>
+        <image class='cart_brand_img' src='/images/shoppingcar_icon_shop.png'></image>
+        {{parent.name}}
+      </view>
+      <view class='cart_list_top_right'>领券</view>
+    </view>
+    <block wx:for="{{parent.shopLists}}">
+      <!-- 购物车店铺产品 -->
+      <view class='cart_list_goods'>
+        <!-- 选中按钮 -->
+        <view class='cart_list_select'>
+          <image data-index="{{index}}" data-parentIndex="{{parentIndex}}" bindtap='toggleSelect' data-id='{{item.shopId}}' data-parent="{{parent.brandId}}" class='cart_select_img' src="{{item.select?'/images/shoppingcar_btn_select_s.png':'/images/shoppingcar_btn_select_n.png'}}"></image>
+        </view>
+        <!-- 商品图片 -->
+        <view class='cart_goods_img'>
+          <image class='cart_goods_img' src='{{item.src}}' mode='aspectFit'></image>
+        </view>
+        <!-- 商品文字 -->
+        <view class='cart_goods_text'>
+          <view class='cart_goods_title'>
+            {{item.title}}
+          </view>
+          <view class='cart_goods_size'>{{item.size}}
+        </view>
+          <view class='cart_goods_price'>¥{{item.price}}</view>
+        </view>
+        <!-- 商品编辑 -->
+        <view class='cart_goods_edit'>
+          <image src='/images/shoppingcar_btn_edit.png'></image>
+          <view class='cart_goods_num'>×{{item.num}}</view>
+        </view>
+      </view>
+    </block>
+
+  </view>
+</block>
+
+<!-- 底部固定 -->
+<view class='fixFooter'>
+
+</view>
+
