--- a/pages/beStoreKeeper/beStoreKeeper.wxss
+++ b/pages/beStoreKeeper/beStoreKeeper.wxss
@@ -2,3 +2,157 @@
 page{
   padding-top: 90rpx;
 }
+.vip_titleImg{
+  text-align: center;
+  margin-top: 46rpx;
+}
+.vip_titleImg image{
+  width:348rpx;
+}
+.classifyNavs{
+  display: flex;
+  padding:0 30rpx;
+  justify-content: space-between;
+  margin-top: 42rpx;
+}
+.classify_nav{
+  height: 70rpx;
+  line-height: 70rpx;
+  text-align: center;
+  color:#FF648B;
+  border:1px solid #F8E4E6;
+  border-radius: 10rpx;
+  width: 24%;
+}
+.classify_nav.active{
+  background: #F8E4E6;
+}
+
+
+swiper{
+  height: 810rpx;
+}
+.swiper_nav{
+  text-align: right;
+  height: 54rpx;
+  line-height: 54rpx;
+  padding-right: 24rpx;
+}
+.swiper_nav>image{
+  width: 20rpx;
+  height: 20rpx;
+  vertical-align: middle;
+  margin:0 4rpx;
+}
+.swiper_list{
+  width: 100%;
+  height: 270rpx;
+  background: #F6F6F6;
+  position: relative;
+  display: flex;
+}
+.swiper_list_298_label{
+  width: 88rpx;
+  height: 88rpx;
+  position: absolute;
+  top:0;
+  left: 0;
+}
+.slide-image{
+  width: 180rpx;
+  height: 180rpx;
+}
+.swiper_list_left{
+  width: 50%;
+  box-sizing: border-box;
+  padding-right: 30rpx;
+  height: 270rpx;
+  text-align: right;
+  line-height: 270rpx;
+}
+.swiper_list_left image{
+  vertical-align: middle;
+}
+.swiper_list_right{
+  position: relative;
+  width: 50%;
+}
+.swiper_list_title{
+  color: #1D1E1C;
+  font-size: 30rpx;
+  margin-top:40rpx;
+}
+.swiper_list_intro{
+  font-size: 22rpx;
+  color:#ccc;
+  margin-top: 6rpx;
+}
+.swiper_list_lookMore{
+  font-size: 22rpx;
+  color:#fff;
+  background: #FE1D2F;
+  display: inline-block;
+  padding:2rpx 10rpx;
+  position: absolute;
+  bottom: 50rpx;
+}
+.swiper_list_select{
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  top:24rpx;
+  right: 24rpx;
+}
+
+.form{
+  position: relative;
+  width: 720rpx;
+  margin:0 auto;
+  height: 825rpx;
+  margin-top:24rpx;
+}
+.form_bg{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.form_body{
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  top:88rpx;
+}
+.form_title{
+  text-align: center;
+  font-size: 36rpx;
+  color: #FF648B;
+}
+.inputPart{
+  padding: 0 50rpx;
+}
+.inputPart_title{
+  font-size: 26rpx;
+  color:#333;
+}
+.inputPart_input{
+  border-bottom: 1px solid #eee;
+  padding-top:4rpx;
+  padding-bottom: 10rpx;
+  margin-bottom: 10rpx;
+}
+.inputPart_input input{
+  color: #999999;
+  font-size: 24rpx;
+}
+.inputPart_submit{
+  width: 222rpx;
+  height: 60rpx;
+  margin:0 auto;
+  margin-top:36rpx;
+}
+.inputPart_submit image{
+  width: 100%;
+  height: 100%;
+}
