--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -53,6 +53,7 @@
 
 </view>
 <loading hidden="{{hiddenLoading}}">正在加载</loading>
-<!-- 
-筛选 -->
-<screening></screening>
+<!-- 筛选 -->
+<!-- <screening
+  bind:toggleFirstNav="toggleFirstNav"
+></screening> -->
