--- a/components/screening/screening.wxss
+++ b/components/screening/screening.wxss
@@ -14,6 +14,7 @@
   width: 86%;
   height: 100%;
   background: #fff;
+  padding-bottom: 120rpx;
 }
 .area_choose{
   display: flex;
@@ -141,6 +142,12 @@
   display: flex;
   border-radius: 10rpx;
 }
+.otherClassify_list_box.active{
+  background: #E31C0C;
+}
+.otherClassify_list_box.active>.otherClassify_list{
+  color:#fff;
+}
 .otherClassify_list{
   width:100%;
   text-align: center;
@@ -155,4 +162,29 @@
 }
 .middle.otherClassify_list{
   margin:0 2%;
+}
+
+
+.toolBtn{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 98rpx;
+  border-top: 1px solid #bfbfbf;
+  display: flex;
+}
+.toolBtn>view{
+  height: 98rpx;
+  line-height: 98rpx;
+  flex: 1;
+  text-align: center;
+  font-size: 30rpx;
+}
+.toolBtn_reset{
+  color: #050101;
+}
+.toolBtn_confirm{
+  background: #E31C0C;
+  color:#fff;
 }
