--- a/pages/shopsDetail/shopsDetail.wxss
+++ b/pages/shopsDetail/shopsDetail.wxss
@@ -329,13 +329,13 @@ page{
   z-index: 10;
   width: 100%;
   height: 100%;
-  top: 0;
+  bottom: 0;
   background: rgba(0, 0, 0, .5);
 }
 .addCart_body{
   background: #fff;
   padding: 0 30rpx;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   box-sizing: border-box;
